feat: generate courses asynchronously
